--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 				left: 0px;
 				background: transparent;
 			}
+			#ship {
+        z-index: 0;
+      }
 		</style>
 	</head>
 	<body>
@@ -16,9 +19,11 @@
 		<canvas id="background" width="600" height="360">
 			Your browser does not support canvas. Please try again with a different browser.
 		</canvas>
+		<canvas id="ship" width="600" height="360"></canvas>
     <script src="./src/Drawable.js"></script>
     <script src="./src/ImagesRepository.js"></script>
     <script src="./src/Background.js"></script>
+		<script src="./src/Ship.js"></script>
 		<script src="./src/index.js"></script>
 	</body>
 </html>
